# EDA2_2_2020

./: CMakeLists.txt  a.out  arvoreBuscaBinaria.c  atividade1_EDA2.c  atividadeFix_frequencia.c  atividadeFix_intercala8.c  atividadeFix_mergesort1.c  bubbleSort.c  calcularTempoDeExecucao.c  classificandoSementes.c  desfilePatos.c  desfilePatosHash.c  elementoMaisFrequente.c  filaPrioridade.c  heapSort.c  insertionSort.c  kk-pagina.c  leo_henrique_turne.c  menoresPlacas.c  mensagensNlogonienses.c  mergeSort.c  numMalucos_180098021.c  olaMundo.c  ordemAlfabetica.c  ordenaStruct.c  pesquisaInstrucoes.c  problema_trocado.c  quickSelect.c  quickSort_otimizado.c  quicksortM3.c  remocao.c  selectionSort.c  soma2.c  somaN.c  testes.c
