cmake_minimum_required(VERSION 3.17)
project(EDA2_2_2020 C)

set(CMAKE_C_STANDARD 99)

add_executable(EDA2_2_2020 main.c)
add_executable(atividade1_EDA2 atividade1_EDA2.c olaMundo.c)
add_executable(mergeSort mergeSort.c)
add_executable(atividadeFix_mergesort1 atividadeFix_mergesort1.c)

add_executable(atividadeFix_intercala8 atividadeFix_intercala8.c)
add_executable(testes testes.c)
add_executable(bubbleSort bubbleSort.c)
add_executable(insertionSort insertionSort.c)
add_executable(atividadeFix_frequencia atividadeFix_frequencia.c)
add_executable(selectionSort selectionSort.c)
add_executable(numMalucos_180098021 numMalucos_180098021.c)
add_executable(quicksortM3 quicksortM3.c)
add_executable(desfilePatos desfilePatos.c)
add_executable(olaMundo olaMundo.c)
add_executable(soma2 soma2.c)

add_executable(somaN somaN.c)
add_executable(calcularTempoDeExecucao calcularTempoDeExecucao.c)
add_executable(pesquisaInstrucoes pesquisaInstrucoes.c)
add_executable(ordemAlfabetica ordemAlfabetica.c)
add_executable(ordenaStruct ordenaStruct.c)
add_executable(problema_trocado problema_trocado.c)
add_executable(remocao remocao.c)
add_executable(quickSort_otimizado quickSort_otimizado.c)
add_executable(quickSelect quickSelect.c)
add_executable(kk-pagina kk-pagina.c)
add_executable(leo_henrique_turne leo_henrique_turne.c)
add_executable(menoresPlacas menoresPlacas.c)
add_executable(heapSort heapSort.c)
add_executable(mensagensNlogonienses mensagensNlogonienses.c)
add_executable(arvoreBuscaBinaria arvoreBuscaBinaria.c)
add_executable(desfilePatosHash desfilePatosHash.c)
add_executable(elementoMaisFrequente elementoMaisFrequente.c)
add_executable(filaPrioridade filaPrioridade.c)
add_executable(classificandoSementes classificandoSementes.c)